cmake_minimum_required(VERSION 3.5)
#set(CMAKE_VERBOSE_MAKEFILE on)

project(Vic2ToHoI4)
SET(CMAKE_CXX_COMPILER g++-7)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)

add_compile_options("-std=c++17")
add_compile_options("-g")

include_directories("../common_items")
include_directories("${PROJECT_SOURCE_DIR}")

file(GLOB MAIN_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB HOI4OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/*.cpp")
file(GLOB HOI4WORLD_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/*.cpp")
file(GLOB HOI4WORLD_DECISIONS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Decisions/*.cpp")
file(GLOB HOI4WORLD_MILITARY_MAPPINGS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/MilitaryMappings/*.cpp")
file(GLOB HOI4WORLD_NAVIES_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Navies/*.cpp")
file(GLOB HOI4WORLD_SHIP_TYPES_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/ShipTypes/*.cpp")
file(GLOB HOI4WORLD_STATES_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/States/*.cpp")
file(GLOB MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/*.cpp")
file(GLOB FLAG_TO_IDEA_MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FlagsToIdeas/*.cpp")
file(GLOB PROVINCE_MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Provinces/*.cpp")
file(GLOB VIC2WORLD_SOURCES "${PROJECT_SOURCE_DIR}/V2World/*.cpp")
file(GLOB VIC2WORLD_WARS_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Wars/*.cpp")
set(COMMON_SOURCES "../common_items/CardinalToOrdinal.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/CommonUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/newParser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/ParserHelpers.cpp")

set(Boost_USE_STATIC_LIBS       OFF)
set(Boost_USE_MULTITHREADED     OFF)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost)
if(Boost_FOUND)
  add_executable(Vic2ToHoi4Converter ${MAIN_SOURCES} ${HOI4OUTPUTTER_SOURCES} ${HOI4WORLD_SOURCES} ${HOI4WORLD_DECISIONS_SOURCES} ${HOI4WORLD_MILITARY_MAPPINGS_SOURCES} ${HOI4WORLD_NAVIES_SOURCES} ${HOI4WORLD_SHIP_TYPES_SOURCES} ${HOI4WORLD_STATES_SOURCES} ${MAPPER_SOURCES} ${FLAG_TO_IDEA_MAPPER_SOURCES} ${PROVINCE_MAPPER_SOURCES} ${VIC2WORLD_SOURCES} ${VIC2WORLD_WARS_SOURCES} ${COMMON_SOURCES})
  add_custom_command(TARGET Vic2ToHoi4Converter POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND chmod u+x Copy_Files.sh)
  add_custom_command(TARGET Vic2ToHoi4Converter POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND ./Copy_Files.sh)
endif()
