cmake_minimum_required(VERSION 3.5)
#set(CMAKE_VERBOSE_MAKEFILE on)

project(Vic2ToHoI4)
SET(CMAKE_CXX_COMPILER g++-8)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)

add_compile_options("-std=c++2a")
add_compile_options("-g")

include_directories("../common_items")
include_directories("../bitmap")
include_directories("${PROJECT_SOURCE_DIR}")

file(GLOB MAIN_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB HOI4_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/*.cpp")
file(GLOB HOI4_DECISIONS_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Decisions/*.cpp")
file(GLOB HOI4_DIPLOMACY_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Diplomacy/*.cpp")
file(GLOB HOI4_EVENTS_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Events/*.cpp")
file(GLOB HOI4_NAVIES_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Navies/*.cpp")
file(GLOB HOI4_OUT_IDEAS_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Ideas/*.cpp")
file(GLOB HOI4_OUT_IDEOLOGIES_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Ideologies/*.cpp")
file(GLOB HOI4_OUT_LEADERS_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Leaders/*.cpp")
file(GLOB HOI4_OUT_MAP_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Map/*.cpp")
file(GLOB HOI4_OUT_MILITARY_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Military/*.cpp")
file(GLOB HOI4_OUT_SCRIPTED_TRIGGERS_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/ScriptedTriggers/*.cpp")
file(GLOB HOI4_OUT_VERSION "${PROJECT_SOURCE_DIR}/Hoi4Outputter/Version/*.cpp")
file(GLOB HOI4_SCRIPTED_LOCALISATIONS_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/ScriptedLocalisations/*.cpp")
file(GLOB HOI4_SHIP_TYPES_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/ShipTypes/*.cpp")
file(GLOB HOI4_STATES_OUTPUTTER_SOURCES "${PROJECT_SOURCE_DIR}/Hoi4Outputter/States/*.cpp")
file(GLOB HOI4WORLD_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/*.cpp")
file(GLOB HOI4WORLD_DECISIONS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Decisions/*.cpp")
file(GLOB HOI4WORLD_DIPLOMACY_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Diplomacy/*.cpp")
file(GLOB HOI4WORLD_EVENTS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Events/*.cpp")
file(GLOB HOI4WORLD_IDEAS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Ideas/*.cpp")
file(GLOB HOI4WORLD_IDEOLOGIES_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Ideologies/*.cpp")
file(GLOB HOI4WORLD_LEADERS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Leaders/*.cpp")
file(GLOB HOI4WORLD_LOCALISATIONS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Localisations/*.cpp")
file(GLOB HOI4WORLD_MILITARY_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Military/*.cpp")
file(GLOB HOI4WORLD_MILITARY_MAPPINGS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/MilitaryMappings/*.cpp")
file(GLOB HOI4WORLD_MAP_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Map/*.cpp")
file(GLOB HOI4WORLD_NAVIES_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/Navies/*.cpp")
file(GLOB HOI4WORLD_SCRIPTED_LOCALISATIONS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/ScriptedLocalisations/*.cpp")
file(GLOB HOI4WORLD_SCRIPTED_TRIGGERS_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/ScriptedTriggers/*.cpp")
file(GLOB HOI4WORLD_SHIP_TYPES_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/ShipTypes/*.cpp")
file(GLOB HOI4WORLD_STATES_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/States/*.cpp")
file(GLOB HOI4WORLD_WAR_CREATOR_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/WarCreator/*.cpp")
file(GLOB MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/*.cpp")
file(GLOB FLAG_TO_IDEA_MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FlagsToIdeas/*.cpp")
file(GLOB PROVINCE_MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Provinces/*.cpp")
file(GLOB MAPPER_VERSIONPARSER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/VersionParser/*.cpp")
file(GLOB VIC2WORLD_SOURCES "${PROJECT_SOURCE_DIR}/V2World/*.cpp")
file(GLOB VIC2WORLD_WARS_SOURCES "${PROJECT_SOURCE_DIR}/V2World/Wars/*.cpp")
set(COMMON_SOURCES "../common_items/CardinalToOrdinal.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/CommonUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/newParser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/ParserHelpers.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/StringUtils.cpp")

add_executable(
	Vic2ToHoi4Converter
	${MAIN_SOURCES}
	${HOI4_OUTPUTTER_SOURCES}
	${HOI4_DECISIONS_OUTPUTTER_SOURCES}
	${HOI4_DIPLOMACY_OUTPUTTER_SOURCES}
	${HOI4_EVENTS_OUTPUTTER_SOURCES}
	${HOI4_NAVIES_OUTPUTTER_SOURCES}
	${HOI4_OUT_IDEAS_SOURCES}
	${HOI4_OUT_IDEOLOGIES_SOURCES}
	${HOI4_OUT_LEADERS_SOURCES}
	${HOI4_OUT_MAP_SOURCES}
	${HOI4_OUT_MILITARY_SOURCES}
	${HOI4_OUT_SCRIPTED_TRIGGERS_SOURCES}
	${HOI4_OUT_VERSION}
	${HOI4_SCRIPTED_LOCALISATIONS_OUTPUTTER_SOURCES}
	${HOI4_SHIP_TYPES_OUTPUTTER_SOURCES}
	${HOI4_STATES_OUTPUTTER_SOURCES}
	${HOI4WORLD_SOURCES}
	${HOI4WORLD_DECISIONS_SOURCES}
	${HOI4WORLD_DIPLOMACY_SOURCES}
	${HOI4WORLD_EVENTS_SOURCES}
	${HOI4WORLD_IDEAS_SOURCES}
	${HOI4WORLD_IDEOLOGIES_SOURCES}
	${HOI4WORLD_LEADERS_SOURCES}
	${HOI4WORLD_LOCALISATIONS_SOURCES}
	${HOI4WORLD_MILITARY_SOURCES}
	${HOI4WORLD_MILITARY_MAPPINGS_SOURCES}
	${HOI4WORLD_MAP_SOURCES}
	${HOI4WORLD_NAVIES_SOURCES}
	${HOI4WORLD_SCRIPTED_LOCALISATIONS_SOURCES}
	${HOI4WORLD_SCRIPTED_TRIGGERS_SOURCES}
	${HOI4WORLD_SHIP_TYPES_SOURCES}
	${HOI4WORLD_STATES_SOURCES}
	${HOI4WORLD_WAR_CREATOR_SOURCES}
	${MAPPER_SOURCES}
	${FLAG_TO_IDEA_MAPPER_SOURCES}
	${PROVINCE_MAPPER_SOURCES}
	${MAPPER_VERSIONPARSER_SOURCES}
	${VIC2WORLD_SOURCES}
	${VIC2WORLD_WARS_SOURCES}
	${COMMON_SOURCES}
)
add_custom_command(TARGET Vic2ToHoi4Converter POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND chmod u+x Copy_Files.sh)
add_custom_command(TARGET Vic2ToHoi4Converter POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND ./Copy_Files.sh)
